build ui into something borderline usable, work out z-index and opacity levels of our wheels, avoid eating anything healthy all morning

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
 body {
 	margin: 0;
 }
+
+.drag-ghost {
+	color: rgba(41, 43, 44, 0.1);
+}
